--- a/app/main-layout/main-layout.html
+++ b/app/main-layout/main-layout.html
@@ -14,19 +14,44 @@
                 <div class="row">
                     <navbar-tag></navbar-tag>
                 </div>
-                <div class="row" ng-show="$ctrl.daFormActive() && $ctrl.drFormInactive()">
-                    <rnform-tag></rnform-tag>
-                </div>
-                <div class="row" ng-show="$ctrl.drFormActive() && $ctrl.daFormInactive()">
-                    <drform-tag></drform-tag>
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-show="$ctrl.getActiveTab() == 2">
-                    <mydocs-tag></mydocs-tag>
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-show="$ctrl.getActiveTab() == 3">
-                    <fluxdocs-tag></fluxdocs-tag>
-                </div>
+            </div>
+        </div>
+        <!--<div ng-show="$ctrl.drFormActive() && $ctrl.daFormInactive()">-->
+        <!--<drform-tag></drform-tag>-->
+        <!--</div>-->
+        <!--<div ng-show="$ctrl.daFormActive() && $ctrl.drFormInactive()">-->
+        <!--<rnform-tag></rnform-tag>-->
+        <!--</div>-->
+        <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-show="$ctrl.getActiveTab() == 2">-->
+        <!--<mydocs-tag></mydocs-tag>-->
+        <!--</div>-->
+        <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-show="$ctrl.getActiveTab() == 3">-->
+        <!--<fluxdocs-tag></fluxdocs-tag>-->
+        <!--</div>-->
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                 ng-if="$ctrl.drFormActive() && $ctrl.daFormInactive()">
+                <drform-tag></drform-tag>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                 ng-if="$ctrl.daFormActive() && $ctrl.drFormInactive()">
+                <rnform-tag></rnform-tag>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                 ng-if="$ctrl.getActiveTab() == 2">
+                <mydocs-tag></mydocs-tag>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                 ng-if="$ctrl.getActiveTab() == 3">
+                <fluxdocs-tag></fluxdocs-tag>
             </div>
         </div>
     </div>
+</div>
 </div>
