--- a/app/rn-doc/rnform-tag.html
+++ b/app/rn-doc/rnform-tag.html
@@ -7,7 +7,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
             <label for="inputFacUC">Facultate/Unitatea de cercetare</label>
             <input type="text" class="form-control mormontInput" id="inputFacUC"
-                   placeholder="Facultate/Unitate de cercetare..." ng-model="$ctrl.rN.facultateDA">
+                   placeholder="Facultate/Unitate de cercetare..." ng-model="$ctrl.facultateDA">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
             <label for="inputDepLab">Departamentul/Laboratorul</label>
@@ -53,7 +53,7 @@
                     <label>VENITURI PROPRII</label>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                    <label for="inputSumVP">Suma (RON) {{$ctrl.sumaVP}}</label>
+                    <label for="inputSumVP">Suma (RON)</label>
                     <input type="number" class="form-control mormontInput" id="inputSumVP" ng-model="$ctrl.sumaVP"
                            value="0" placeholder="0">
                 </div>
