--- a/app/mydocs-tag/mydocs-tag.html
+++ b/app/mydocs-tag/mydocs-tag.html
@@ -3,7 +3,7 @@
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
             Id document
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 center">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
             Tip document
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
@@ -12,15 +12,15 @@
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
             Data cereare document
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
             Operatii document
         </div>
     </div>
-    <div ng-repeat="item in $ctrl.docItems.$$state.value" class="row col-lg-12 col-md-12 col-sm-12 col-xs-12 doc">
+    <div ng-repeat="item in $ctrl.docItems" class="row col-lg-12 col-md-12 col-sm-12 col-xs-12 doc">
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
             {{item.id}}
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 center">
+        <div class="col-lg-4 col-md-3 col-sm-3 col-xs-3 center">
             {{item.tipDocumet}}
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
@@ -33,7 +33,10 @@
             <button class="btn btn-default mormontButton">Editeaza</button>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
-            <button class="btn btn-default mormontButton">Sterge</button>
+            <button class="btn btn-default mormontButton" ng-click="$ctrl.delete(item.id, item.versiune, item.tipDocumet)">Sterge</button>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
+            <button class="btn btn-default mormontButton" ng-click="$ctrl.makeFinal(item.id, item.versiune, item.tipDocumet)">Finalizare</button>
         </div>
     </div>
 </div>
